--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meghalaya Tourist Guide</title>
+    <title>JustAtry</title>
+    <!-- Add MapMyIndia JavaScript SDK -->
+    <script src="https://apis.mapmyindia.com/advancedmaps/v1/d2ec3d2983328c79e95ac5277cf08703/map_load?v=1.5"></script>
   </head>
   <body>
     <div id="root"></div>
